# yadof

./: .gitignore  README.md  pyproject.toml  reference_map.md  spec 20260502.md  start_optimization_aedtopt.cmd  start_optimization_from_config.py  test10generation.ps1
admin_tool/: README.md
admin_tool/htcondor/: 20260712_official_docs_review.md  20260713_hfss_fix_experiments.md  README.md  windows_pool_debug.md
admin_tool/htcondor_doc/: 20260712_official_docs_deep_dive.md  20260712_official_docs_review.md  20260713_hfss_fix_experiments.md  README.md  deployment_contract.md  windows_pool_debug.md
admin_tool/htcondor_pool/: README.md  add_condor_to_path.cmd  add_condor_to_path.ps1  htcondor_pool.ps1  (+8 more)
agent_doc/: README.md  calc_cost_typical_patterns.md  config_and_run.md  optimization_workflow.md  package_foundation.md  workflow_typical_patterns.md
architecture/: 00_architecture_index.md  4plus1_development_view.md  4plus1_logical_view.md  4plus1_physical_view.md  4plus1_process_view.md  4plus1_scenarios.md  c4_component.md  c4_container.md  c4_context.md
dev_doc/: README.md  readme.md  reference_map.md  spec 20260502.md  terminology.md
examples/: README.md
project/: .gitignore  README.md  __init__.py  config.py  config_all.py
prompt/: 00_project.md  01_terminology.md  99_notes.md
reference/: hfss_condor_multicore_debug_20260711.md  hfss_condor_multicore_diagnosis_reference.md  how_to_create_new_project.md  htcondor_windows_debug_reference.md
tests/: README.md  test_cost_misc.py  test_hfss_get_para_and_range_direct.py  test_package_foundation.py  test_packaged_distributed_execution.py  test_packaged_local_evaluation.py  test_packaged_optimize_surrogate.py  test_packaged_recorded_data.py  test_packaged_run_cli.py  test_packaged_user_tools_cli.py  test_rawdata_contract.py  test_test_layout_contract.py  test_view_cost_tool.py  test_view_time_tool.py  test_workspace_config_task_loaders.py  test_workspace_init_check_cli.py  test_yadof_resource_retries.py
user_doc/: README.md  calc_cost_typical_patterns.md  config_and_run.md  optimization_workflow.md  package_foundation.md  workflow_typical_patterns.md
(+463 files in other folders)
