[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "yadof"
dynamic = ["version"]
description = "Task-agnostic optimization framework for expensive workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3",
    "pymoo>=0.6,<0.7",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
keywords = ["optimization", "simulation", "surrogate-model", "workflow"]

[project.optional-dependencies]
surrogate = ["torch>=2.2"]
plot = ["matplotlib>=3.8"]
hfss = ["ansys-aedt-core>=0.18"]
dev = [
    "build>=1.2",
    "hatchling>=1.27",
    "pytest>=8",
    "twine>=5",
]

[project.scripts]
yadof = "yadof.cli:main"

[project.urls]
Repository = "https://github.com/YS-Pan/yadof"
Issues = "https://github.com/YS-Pan/yadof/issues"

[tool.hatch.version]
path = "src/yadof/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/yadof"]

[tool.hatch.build.targets.wheel.force-include]
"dev_doc" = "yadof/_resources/docs/dev_doc"
"agent_doc" = "yadof/_resources/docs/agent_doc"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/src/yadof",
    "/dev_doc",
    "/agent_doc",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --basetemp=tests/_pytest_tmp --ignore=tests/_tmp_runtime --ignore=tests/_contract_tmp --ignore=tests/_pytest_tmp --ignore=tests/_build_deps --ignore=tests/_installed_env"
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
    "venv",
    "_pytest_tmp*",
    "_tmp_runtime",
    "_contract_tmp",
    "_build_deps",
    "_installed_env",
]
testpaths = ["tests"]
